--- a/MyLibrary/.swiftpm/xcode/xcshareddata/xcschemes/MyLibrary.xcscheme
+++ b/MyLibrary/.swiftpm/xcode/xcshareddata/xcschemes/MyLibrary.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "MyIntegrationTests"
+               BuildableName = "MyIntegrationTests"
+               BlueprintName = "MyIntegrationTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -45,6 +59,16 @@
                BlueprintIdentifier = "MyLibraryTests"
                BuildableName = "MyLibraryTests"
                BlueprintName = "MyLibraryTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "MyIntegrationTests"
+               BuildableName = "MyIntegrationTests"
+               BlueprintName = "MyIntegrationTests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
