--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    - name: Force Xcode 14
+      run: sudo xcode-select -switch /Applications/Xcode_14.0.1.app
     - name: Build
       run: swift build -v
     - name: Run tests
