--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,5 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: swift build -v
+    - name: Force Xcode 11
+      run: sudo xcode-select -switch /Applications/Xcode_14.0.1.app
     - name: Run tests
       run: swift test -v
