--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,10 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: enter work dictionary
       run: cd MyLibrary
+    - name: enter
+      run: pwd
     - name: Build
       run: swift build -v
-    - name: Force Xcode 11
-      run: sudo xcode-select -switch /Applications/Xcode_14.0.1.app
     - name: Run tests
       run: swift test -v
 
