--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,8 +14,11 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - name: enter
+      run: |
+        cd app
     - name: Build
-      run: swift build
+      run: swift build -v
     - name: Run tests
       run: swift test -v
 
