--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: enter
       run: |
-        cd MyLibrary/
+        cd /Users/runner/work/CS561-HW/CS561-HW/MyLibrary
     - name: check
       run: pwd
     - name: Build
