--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: change dictionary
+      working-directory: ./MyLibrary
     - name: Build
       run: swift build -v
     - name: Run tests
