--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,5 +18,6 @@ jobs:
       working-directory: ./MyLibrary
       run: swift build -v
     - name: Run tests
+      working-directory: ./MyLibrary
       run: swift test -v
 
