--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -5,9 +5,13 @@ name: Swift
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+           - "main"
+           - "danlin/add-tests"
   pull_request:
-    branches: [ "main" ]
+    branches: 
+           - "main"
+           - "danlin/add-tests"
     
 jobs:
   build:
