--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js
       uses: actions/setup-node@v2
-      with: 
-        cache: 'npm'
+    - name: install dependencies
     - run: npm ci
+    - name: run server
     - run: npm run serve
     - name: Build
       working-directory: ./MyLibrary
