--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/setup-node@v2
     - name: install dependencies
       working-directory: ./mock-weather-server
-      run: npm install
+      run: npm install -g pm2
     - name: run server
       working-directory: ./mock-weather-server
       run: pm2 start app.js
